feat(reports-api): add daily sale report
s